--- a/BigSchool_Khanh2/BigSchool_Khanh2.csproj
+++ b/BigSchool_Khanh2/BigSchool_Khanh2.csproj
@@ -190,16 +190,35 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710160931555_InitialModel.cs" />
+    <Compile Include="Migrations\201710160931555_InitialModel.Designer.cs">
+      <DependentUpon>201710160931555_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710160944358_CreateTableCourseAndCategory.cs" />
+    <Compile Include="Migrations\201710160944358_CreateTableCourseAndCategory.Designer.cs">
+      <DependentUpon>201710160944358_CreateTableCourseAndCategory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710160954366_PopulateCategoryTable.cs" />
+    <Compile Include="Migrations\201710160954366_PopulateCategoryTable.Designer.cs">
+      <DependentUpon>201710160954366_PopulateCategoryTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CourseViewModel.cs" />
+    <Compile Include="ViewModels\FutureDate.cs" />
+    <Compile Include="ViewModels\ValidTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -258,6 +277,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Courses\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -274,6 +294,17 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201710160931555_InitialModel.resx">
+      <DependentUpon>201710160931555_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710160944358_CreateTableCourseAndCategory.resx">
+      <DependentUpon>201710160944358_CreateTableCourseAndCategory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710160954366_PopulateCategoryTable.resx">
+      <DependentUpon>201710160954366_PopulateCategoryTable.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
