edit, delete my courses

--- a/BigSchool_Khanh2/BigSchool_Khanh2.csproj
+++ b/BigSchool_Khanh2/BigSchool_Khanh2.csproj
@@ -200,6 +200,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Api\CoursesController.cs" />
     <Compile Include="Controllers\AttendancesController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\FollowingsController.cs" />
@@ -234,6 +235,10 @@
     <Compile Include="Migrations\201710161528535_addFollowingsTable.Designer.cs">
       <DependentUpon>201710161528535_addFollowingsTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710162229543_AddCoulumnIsCanceledToTableCourses.cs" />
+    <Compile Include="Migrations\201710162229543_AddCoulumnIsCanceledToTableCourses.Designer.cs">
+      <DependentUpon>201710162229543_AddCoulumnIsCanceledToTableCourses.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Attendance.cs" />
@@ -257,6 +262,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -310,6 +316,7 @@
     <Content Include="Views\Courses\Create.cshtml" />
     <Content Include="Views\Courses\Attending.cshtml" />
     <Content Include="Views\Account\Following.cshtml" />
+    <Content Include="Views\Courses\Mine.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -345,6 +352,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710161528535_addFollowingsTable.resx">
       <DependentUpon>201710161528535_addFollowingsTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710162229543_AddCoulumnIsCanceledToTableCourses.resx">
+      <DependentUpon>201710162229543_AddCoulumnIsCanceledToTableCourses.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
